--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "start": "vite --port=4000"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "install": "^0.13.0",
     "npm": "^10.8.0",
     "react": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react-swc": "^3.5.0",
